fix UI and add UI for adding problem