@@ -62,82 +62,35 @@ public class TeacherSubjectController {
 
     @Autowired
     private StudentMapper studentMapper;
+
+    // SUBJECT
     @GetMapping("")
     public String showSubjectPage(Model model) {
         model.addAttribute("pageTitle", "Môn học");
-        List<Subject> subjectEntities = (List<Subject>) subjectManagement.getAllSubject().getData();
-        List<SubjectDTO> subjects = subjectEntities.stream().map(item -> subjectMapper.entityToDTO(item)).collect(Collectors.toList());
+        List<SubjectDTO> subjects = ((List<Subject>) subjectManagement.getAllSubject().getData())
+                .stream().map(item -> subjectMapper.entityToDTO(item)).toList();
         model.addAttribute("subjects", subjects);
-        return "/teacher/subject";
+        return "/teacher/subject/subject";
     }
 
+
+    // SUBJECT CLASS
     @GetMapping("/{subjectId}")
     public String showSubjectClassPage(@PathVariable("subjectId") String subjectId, Model model) {
         model.addAttribute("pageTitle", "Lớp môn học");
-        List<SubjectClass> subjectClassEntities = (List<SubjectClass>) subjectClassManagement.getAllSubjectClassBySubjectId(subjectId).getData();
-        List<SubjectClassDTO> subjectClassList = subjectClassEntities.stream().map(item -> subjectClassMapper.entityToDTO(item)).collect(Collectors.toList());
-        model.addAttribute("subjectClasses", subjectClassList);
-        return "/teacher/subject-class";
+        List<SubjectClassDTO> subjectClasses = ((List<SubjectClass>) subjectClassManagement.getAllSubjectClassBySubjectId(subjectId).getData())
+                .stream().map(item -> subjectClassMapper.entityToDTO(item)).collect(Collectors.toList());
+        model.addAttribute("subjectClasses", subjectClasses);
+        return "/teacher/subject/subject-class";
     }
 
-    @GetMapping("/{subjectId}/class/{classId}")
-    public String showSubjectClassGroupPage(@PathVariable("subjectId") String subjectId,
-                                            @PathVariable("classId") String subjectClassId,
-                                            Model model) {
-        model.addAttribute("pageTitle", "Nhóm thực hành");
-        List<SubjectClassGroup> subjectClassGroupEntities = (List<SubjectClassGroup>) subjectClassGroupManagement.getAllSubjectClassGroupOfSubjectClass(subjectClassId).getData();
-        List<SubjectClassGroupDTO> subjectClassGroupList = subjectClassGroupEntities.stream().map(item -> subjectClassGroupMapper.entityToDTO(item)).collect(Collectors.toList());
-        model.addAttribute("subjectClassGroups", subjectClassGroupList);
-        return "/teacher/subject-class-group";
-    }
-
-    @GetMapping("/{subjectId}/class/{classId}/group/{groupId}/student")
-    public String showStudentOfGroupPage(@PathVariable("subjectId") String subjectId,
-                                         @PathVariable("classId") String classId,
-                                         @PathVariable("groupId") String groupId,
-                                         Model model) {
-        model.addAttribute("pageTitle", "Sinh viên trong nhóm thực hành");
-        List<StudentOfGroup> studentOfGroups = (List<StudentOfGroup>) studentOfGroupManagement.getStudentOfGroupByGroupId(groupId).getData();
-        List<StudentDTO> studentListInGroup = studentOfGroups.stream().map(item -> studentMapper.entityToDTO(item.getStudent())).collect(Collectors.toList());
-        model.addAttribute("students", studentListInGroup);
-        return "/teacher/student-of-group";
-    }
-
-    @GetMapping("/{subjectId}/class/{classId}/group/{groupId}/edit")
-    public String showEditGroupPage(@PathVariable("subjectId") String subjectId,
-                                    @PathVariable("classId") String classId,
-                                    @PathVariable("groupId") String groupId,
-                                    Model model) {
-        model.addAttribute("pageTitle", "Chỉnh sửa nhóm thực hành");
-        ResponseObject responseObject = subjectClassGroupManagement.getSubjectClassGroupById(groupId);
-        if (!responseObject.getStatus().equals(HttpStatus.OK))
-            return "redirect:/error";
-        SubjectClassGroupDTO subjectClassGroup = subjectClassGroupMapper.entityToDTO((SubjectClassGroup) responseObject.getData());
-        model.addAttribute("group", subjectClassGroup);
-        return "/teacher/subject-class-group-edit";
-    }
-
-    @PostMapping("/{subjectId}/class/{classId}/group/{groupId}/edit")
-    public String editGroup(@PathVariable("subjectId") String subjectId,
-                            @PathVariable("classId") String classId,
-                            @PathVariable("groupId") String groupId,
-                            @ModelAttribute("group") SubjectClassGroupDTO group) {
-        SubjectClassGroupRequest subjectClassGroupRequest = new SubjectClassGroupRequest();
-        subjectClassGroupRequest.setSubjectClassGroupId(groupId);
-        subjectClassGroupRequest.setSubjectClassGroupName(group.getSubjectClassGroupName());
-        subjectClassGroupRequest.setSubjectClassId(group.getSubjectClassId());
-        ResponseObject responseObject = subjectClassGroupManagement.editSubjectClassGroup(subjectClassGroupRequest);
-        if (!responseObject.getStatus().equals(HttpStatus.OK))
-            return "redirect:/error";
-        return "redirect:/teacher/subject/{subjectId}/class/{classId}";
-    }
-
+    // SUBJECT CLASS ADD
     @GetMapping("/{subjectId}/add")
-    public String showAddSubjectClassForm(@PathVariable("subjectId") String subjectId, Model model) {
+    public String showAddSubjectClassPage(@PathVariable("subjectId") String subjectId, Model model) {
         model.addAttribute("pageTitle", "Thêm lớp môn học");
         SubjectClassDTO subjectClass = new SubjectClassDTO();
         model.addAttribute("subjectClass", subjectClass);
-        return "/teacher/subject-class-add";
+        return "/teacher/subject/subject-class-add";
     }
 
     @PostMapping("/{subjectId}/add")
@@ -148,8 +101,9 @@ public class TeacherSubjectController {
         return "redirect:/teacher/subject/{subjectId}";
     }
 
+    // SUBJECT CLASS EDIT
     @GetMapping("/{subjectId}/class/{classId}/edit")
-    public String showEditClassPage(@PathVariable("subjectId") String subjectId,
+    public String showEditSubjectClassPage(@PathVariable("subjectId") String subjectId,
                                     @PathVariable("classId") String classId,
                                     Model model) {
         model.addAttribute("pageTitle", "Chỉnh sửa lớp");
@@ -158,11 +112,11 @@ public class TeacherSubjectController {
             return "redirect:/error";
         SubjectClass entity = (SubjectClass) responseObject.getData();
         model.addAttribute("subjectClass", subjectClassMapper.entityToDTO(entity));
-        return "/teacher/subject-class-edit";
+        return "/teacher/subject/subject-class-edit";
     }
 
     @PostMapping("/{subjectId}/class/{classId}/edit")
-    public String editClass(@PathVariable("subjectId") String subjectId,
+    public String editSubjectClass(@PathVariable("subjectId") String subjectId,
                             @PathVariable("classId") String classId,
                             @ModelAttribute("subjectClass") SubjectClassDTO subjectClass) {
         ResponseObject responseObject = subjectClassManagement.editSubjectClass(new SubjectClassRequest(classId, subjectClass.getSubjectClassName(), subjectId));
@@ -171,6 +125,19 @@ public class TeacherSubjectController {
         return "redirect:/teacher/subject/{subjectId}";
     }
 
+    // SUBJECT CLASS GROUP
+    @GetMapping("/{subjectId}/class/{classId}")
+    public String showSubjectClassGroupPage(@PathVariable("subjectId") String subjectId,
+                                            @PathVariable("classId") String subjectClassId,
+                                            Model model) {
+        model.addAttribute("pageTitle", "Nhóm thực hành");
+        List<SubjectClassGroupDTO> subjectClassGroups = ((List<SubjectClassGroup>) subjectClassGroupManagement.getAllSubjectClassGroupOfSubjectClass(subjectClassId).getData())
+                .stream().map(item -> subjectClassGroupMapper.entityToDTO(item)).collect(Collectors.toList());
+        model.addAttribute("subjectClassGroups", subjectClassGroups);
+        return "/teacher/subject/subject-class-group";
+    }
+
+    // SUBJECT CLASS GROUP ADD
     @GetMapping("/{subjectId}/class/{classId}/add")
     public String showAddSubjectClassGroupForm(@PathVariable("subjectId") String subjectId,
                                                @PathVariable("classId") String classId,
@@ -178,7 +145,7 @@ public class TeacherSubjectController {
         model.addAttribute("pageTitle", "Thêm nhóm thực hành");
         SubjectClassGroupDTO subjectClassGroup = new SubjectClassGroupDTO();
         model.addAttribute("subjectClassGroup", subjectClassGroup);
-        return "/teacher/subject-class-group-add";
+        return "/teacher/subject/subject-class-group-add";
     }
 
     @PostMapping("/{subjectId}/class/{classId}/add")
@@ -191,14 +158,53 @@ public class TeacherSubjectController {
         return "redirect:/teacher/subject/{subjectId}/class/{classId}";
     }
 
+    // SUBJECT CLASS GROUP EDIT
+    @GetMapping("/{subjectId}/class/{classId}/group/{groupId}/edit")
+    public String showEditGroupPage(@PathVariable("subjectId") String subjectId,
+                                    @PathVariable("classId") String classId,
+                                    @PathVariable("groupId") String groupId,
+                                    Model model) {
+        model.addAttribute("pageTitle", "Chỉnh sửa nhóm thực hành");
+        ResponseObject responseObject = subjectClassGroupManagement.getSubjectClassGroupById(groupId);
+        if (!responseObject.getStatus().equals(HttpStatus.OK))
+            return "redirect:/error";
+        SubjectClassGroupDTO subjectClassGroup = subjectClassGroupMapper.entityToDTO((SubjectClassGroup) responseObject.getData());
+        model.addAttribute("group", subjectClassGroup);
+        return "/teacher/subject/subject-class-group-edit";
+    }
+
+    @PostMapping("/{subjectId}/class/{classId}/group/{groupId}/edit")
+    public String editGroup(@PathVariable("subjectId") String subjectId,
+                            @PathVariable("classId") String classId,
+                            @PathVariable("groupId") String groupId,
+                            @ModelAttribute("group") SubjectClassGroupDTO group) {
+        ResponseObject responseObject = subjectClassGroupManagement.editSubjectClassGroup(new SubjectClassGroupRequest(groupId, group.getSubjectClassGroupName(), classId));
+        if (!responseObject.getStatus().equals(HttpStatus.OK))
+            return "redirect:/error";
+        return "redirect:/teacher/subject/{subjectId}/class/{classId}";
+    }
+
+    // STUDENT OF GROUP
+
+    @GetMapping("/{subjectId}/class/{classId}/group/{groupId}/student")
+    public String showStudentOfGroupPage(@PathVariable("subjectId") String subjectId,
+                                         @PathVariable("classId") String classId,
+                                         @PathVariable("groupId") String groupId,
+                                         Model model) {
+        model.addAttribute("pageTitle", "Sinh viên trong nhóm thực hành");
+        List<StudentDTO> students = ((List<StudentOfGroup>) studentOfGroupManagement.getStudentOfGroupByGroupId(groupId).getData()).stream().map(item -> studentMapper.entityToDTO(item.getStudent())).collect(Collectors.toList());
+        model.addAttribute("students", students);
+        return "/teacher/subject/student-of-group";
+    }
+
     @GetMapping("/{subjectId}/class/{classId}/group/{groupId}/student/edit")
     public String showAddStudentToGroupPage(@PathVariable("subjectId") String subjectId,
                                             @PathVariable("classId") String classId,
                                             @PathVariable("groupId") String groupId,
                                             Model model) {
         model.addAttribute("pageTitle", "Thêm sinh viên vào nhóm thực hành");
-        List<Student> activeStudentList = (List<Student>) studentManagementService.getAllStudent().getData();
-        activeStudentList = activeStudentList.stream().filter(item -> item.getActive().equals(Byte.valueOf("1"))).collect(Collectors.toList());
+        List<Student> activeStudentList = ((List<Student>) studentManagementService.getAllStudent().getData())
+                .stream().filter(item -> item.getActive() == (byte) 1).toList();
         List<StudentShowDTO> studentShowList = activeStudentList.stream().map(student -> {
             StudentShowDTO studentShowDTO = studentMapper.entityToShowDTO(student);
             ResponseObject responseObject = studentOfGroupManagement.findStudentOfGroupByStudentIdAndSubjectClassId(student.getId(), classId);
@@ -206,7 +212,7 @@ public class TeacherSubjectController {
             return studentShowDTO;
         }).collect(Collectors.toList());
         model.addAttribute("students", studentShowList);
-        return "/teacher/student-of-group-student";
+        return "/teacher/subject/student-of-group-student";
     }
 
     @GetMapping("/{subjectId}/class/{classId}/group/{groupId}/student/{studentId}/add")
